2001-05-01  Martin Baulig  <baulig@suse.de>

	* tests/*.c: Make the tests actually work.

	* Makefile.am (SUBDIRS): Added tests/.

2001-05-01  Martin Baulig  <baulig@suse.de>

	* bonobo/libbonoboui-2.0.pc.in: Make this actually work.

2001-04-25  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-dock.[ch], bonobo/bonobo-dock-item.[ch],
	bonobo/bonobo-dock-band.[ch], bonobo/bonobo-dock-layout.[ch]:
	Moved here from libgnomeui/libgnomeui/gnome-dock*.[ch] and
	renamed from GnomeDock -> BonoboDock.

	* bonobo/bonobo-ui-sync-toolbar.[ch], bonobo/bonobo-win.c:
	s/GnomeDock/BonoboDock/g; s/gnome_dock/bonobo_dock/g;.

2001-04-24  Martin Baulig  <baulig@suse.de>

	* bonobo/bonobo-ui-sync-menu.c (impl_bonobo_ui_sync_menu_state):
	Use GtkImageMenuItem instead of GtkPixmapMenuItem.
	(impl_bonobo_ui_sync_menu_state): Comment out accelerator stuff.

	* bonobo/bonobo-ui-sync-toolbar.c
	(cmd_get_toolbar_pixbuf): Renamed to cmd_get_toolbar_image() and let
	it return a GtkWidget.

	* bonobo/bonobo-ui-toolbar-button-item.c
	(create_pixmap_widget_from_pixbuf): Removed.
	(set_icon): Renamed to set_image() and let it return a GtkWidget.

	* bonobo/bonobo-ui-toolbar-button-item.h
	(bonobo_ui_toolbar_button_item_set_icon): Renamed to
	bonobo_ui_toolbar_button_set_image() and changed argument from
	GdkPixbuf to GtkWidget.
	(BonoboUIToolbarButtonItemClass): Changed argument of `set_icon'
	from GdkPixbuf to GtkWidget.

	* bonobo/bonobo-ui-util.c (get_stock_pixbuf): Removed.
	(bonobo_ui_util_xml_get_icon_pixbuf): Removed.
	(bonobo_ui_util_xml_get_icon_pixmap_widget): Move functionality
	from bonobo_ui_util_xml_get_icon_pixbuf() and use the GtkStock
	system.

2001-04-24  Martin Baulig  <baulig@suse.de>

	* configure.in: Depend on libgnome.

	* bonobo/Makefile.am (INCLUDES): Added BONOBO_UIDIR.

	* bonobo/bonobo-ui-util.c
	(convert_from_chromakey, pixbuf_from_imlib): Removed.
	(get_stock_pixbuf): Use find_pixmap_in_path() instead of
	gnome_pixmap_file().